# mytwitterclone-practice

./: db.sqlite3  pyproject.toml
authentication/: forms.py  views.py
templates/: addtweetform.html  generic_form.html  index.html  login_form.html  profile.html  signupform.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  apps.py  models.py  signals.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_customuser_birthday.py  0003_customuser_avatar.py  0004_alter_customuser_avatar.py  0005_alter_customuser_avatar.py  0006_alter_customuser_avatar.py  0007_alter_customuser_avatar.py  0008_alter_customuser_avatar.py  0009_customuser_is_online.py  0010_remove_customuser_is_online.py  0011_customuser_is_online.py
