[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = "practice twitter clone"
authors = ["MikeJonesSE <mikejones.sedev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
